# soccer-stars-django-webapp

./: .gitignore  LICENSE  README.md  docker-compose.yml
client/: Dockerfile  package-lock.json  package.json
client/src/: App.js  App_bk.js  Arrow.js  Cap.js  CapArrow.js  Circle.js  Circle_bk.js  Match.js  global.css  index.js
server/: manage.py  pyproject.toml
server/backend/: Dockerfile  pyproject.toml  requirements.txt
server/backend/backend/: asgi.py  routing.py  settings.py
server/backend/match/: consumers.py  routing.py
server/backend/match/match_logic/: collision_resolver.py  formations.py  game_entities.py  main_match.py  motion.py
server/notebooks/match/: collision_resolver.ipynb  collision_resolver.py  config.py  game_entities.py  main_motion.ipynb  main_motion.py  match_render.ipynb  motion.ipynb  motion.py  motion_debug.ipynb  motion_resolver.py  utils.py
server/notebooks/match/archive/: debug_collision_resolver.ipynb
server/notebooks/websocket/: debug_websocket.ipynb  debug_websocket_motion.ipynb
server/soccer_match/: manage.py
server/soccer_match/match/: consumers.py  routing.py  urls.py  views.py
server/soccer_match/match/templates/match/: index.html
server/soccer_match/soccer_match/: asgi.py  settings.py  urls.py  wsgi.py
server/soccerstars/: asgi.py  wsgi.py
server/src/match/: collision_resolver.py  formations.py  game_entities.py  main_debug.py  motion.py  utils.py
server/src/match_logic/: formations.py  game_entities.py  main_match.py  motion.py
server/tests/: test_soccer_stars_app.py
server_bk/: README.md
(+4 files in other folders)
