[tool.poetry]
name = "soccer-stars-app"
version = "0.1.0"
description = ""
authors = ["DavidAmat <daolondrizdaolondriz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.18"
Django = ">=4.0.1"
channels= "3.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
